# news-letter-api

./: Cargo.toml  README.md
.cargo/: config.toml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
