[package]
name = "news-letter-api"
version = "0.1.0"
authors = ["Bomen Derick"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "news-letter-api"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.217", features = ["derive"] }
config = "0.15.7"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.11.6"
log = "0.4.25"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.15"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.12.12"
once_cell = "1.20.2"
